--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.2.41'
+
     repositories {
         google()
         jcenter()
+        maven { url "http://nexus.java.magora.team/content/repositories/releases/" }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -19,9 +22,26 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "http://nexus.java.magora.team/content/repositories/releases/" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    minSdkVersion = 21
+    targetSdkVersion = 27
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+
+    supportLibraryVersion = '27.1.1'
+    constraintsLayoutVersion = '1.1.0'
+    protocolApiVerison = '3.1.7'
+
+    junitVersion = '4.12'
+
+    testRunnerVersion = '1.0.2'
+    espressoVersion = '3.0.2'
 }
